--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -19,3 +19,6 @@ body {
 .custom-waguri-font {
   font-family: 'Waguri', sans-serif;
 }
+.cusom-pretendard-font {
+  font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
+}
