--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -23,7 +23,7 @@ body {
 
 @font-face {
   font-family: 'Waguri';
-  src: url('public/fonts/Waguri.ttf') format('truetype');
+  src: url('/fonts/Waguri.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
