refactor: globas.css heigth값 변경

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -19,6 +19,7 @@ body {
   display: flex;
   justify-content: center;
   font-family: 'Pretendard Variable', sans-serif;
+  height: 100vh;
 }
 
 @font-face {
